--- a/index.html
+++ b/index.html
@@ -72,28 +72,33 @@
             </div>
         </div>
         <div id='bottom-row'>
-            <h3>Parameters</h3>
-            <div class='slide-container'>
-                <div class='p' id='p1'>
-                     <div class='wrapper text1'><p id='par_name1'>&#956: </p></div>
-                     <div class='wrapper s' id='two_thumb1'></div>
-                     <div class='wrapper text2'><p id='output1'>&#956 = ?</p></div>
+            <div id='parameter'>
+                <h3>Parameters</h3>
+                <div class='slide-container'>
+                    <div class='p' id='p1'>
+                        <div class='wrapper text1'><p id='par_name1'>&#956: </p></div>
+                        <div class='wrapper s' id='two_thumb1'></div>
+                        <div class='wrapper text2'><p id='output1'>&#956 = ?</p></div>
+                    </div>
+                    <div class='p' id='p2'>
+                        <div class='wrapper text1'><p id='par_name2'>&#963: </p></div>
+                        <div class='wrapper s' id='two_thumb2'></div>
+                        <div class='wrapper text2'><p id='output2'>&#963 = ?</p></div>
                 </div>
-                <div class='p' id='p2'>
-                    <div class='wrapper text1'><p id='par_name2'>&#963: </p></div>
-                    <div class='wrapper s' id='two_thumb2'></div>
-                    <div class='wrapper text2'><p id='output2'>&#963 = ?</p></div>
-               </div>
-                <div class='p' id='p3'>
-                    <div class='wrapper text1'><p id='par_name3'>#: </p></div>
-                    <div class='wrapper s' id='two_thumb3'></div>
-                    <div class='wrapper text2'><p id='output3'># = ?</p></div>
+                    <div class='p' id='p3'>
+                        <div class='wrapper text1'><p id='par_name3'>#: </p></div>
+                        <div class='wrapper s' id='two_thumb3'></div>
+                        <div class='wrapper text2'><p id='output3'># = ?</p></div>
+                    </div>
+                    <div class='p' id='p4'>
+                        <div class='wrapper text1'><p id='par_name4'>#: </p></div>
+                        <div class='wrapper s' id='two_thumb4'></div>
+                        <div class='wrapper text2'><p id='output4'># = ?</p></div>
+                    </div>
                 </div>
-                <div class='p' id='p4'>
-                    <div class='wrapper text1'><p id='par_name4'>#: </p></div>
-                    <div class='wrapper s' id='two_thumb4'></div>
-                    <div class='wrapper text2'><p id='output4'># = ?</p></div>
-                </div>
+            </div>
+            <div id='options'>
+
             </div>
         </div>
 
