--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                     <ul class='dropdown' id='dd2'>
                         <div class='bar'></div>
                         <li id='Norm'>Normal</li>
+                        <li id='Log-Norm'>Log-Normal</li>
                         <li id='Uni'>Uniform</li>
                         <li id='Exp'>Exponential</li>
                         <li id='Gamma'>Gamma</li>
-                        <li id='Log-Norm'>Log-Normal</li>
+                        <li id='Chi'>Chi-Square</li>
                         <li id='Beta'>Beta</li>
                     </ul>
                 </li>
@@ -65,40 +66,31 @@
                 </p>
                 <p id='lim'> $$ { -\infty < x < \infty} $$ </p>
                 <hr>
-                <ul class='metrics'>
-                    <li class='E' id='Expect'>E[X] = 0.00</li>
-                    <li class='V' id='Var'>Var(X) = 1.00</li>
-                </ul>
             </div>
         </div>
         <div id='bottom-row'>
-            <div id='parameter'>
-                <h3>Parameters</h3>
-                <div class='slide-container'>
-                    <div class='p' id='p1'>
-                        <div class='wrapper text1'><p id='par_name1'>&#956: </p></div>
-                        <div class='wrapper s' id='two_thumb1'></div>
-                        <div class='wrapper text2'><p id='output1'>&#956 = ?</p></div>
-                    </div>
-                    <div class='p' id='p2'>
-                        <div class='wrapper text1'><p id='par_name2'>&#963: </p></div>
-                        <div class='wrapper s' id='two_thumb2'></div>
-                        <div class='wrapper text2'><p id='output2'>&#963 = ?</p></div>
+            <h3>Parameters</h3>
+            <div class='slide-container'>
+                <div class='p' id='p1'>
+                     <div class='wrapper text1'><p id='par_name1'>&#956: </p></div>
+                     <div class='wrapper s' id='two_thumb1'></div>
+                     <div class='wrapper text2'><p id='output1'>&#956 = ?</p></div>
                 </div>
-                    <div class='p' id='p3'>
-                        <div class='wrapper text1'><p id='par_name3'>#: </p></div>
-                        <div class='wrapper s' id='two_thumb3'></div>
-                        <div class='wrapper text2'><p id='output3'># = ?</p></div>
-                    </div>
-                    <div class='p' id='p4'>
-                        <div class='wrapper text1'><p id='par_name4'>#: </p></div>
-                        <div class='wrapper s' id='two_thumb4'></div>
-                        <div class='wrapper text2'><p id='output4'># = ?</p></div>
-                    </div>
+                <div class='p' id='p2'>
+                    <div class='wrapper text1'><p id='par_name2'>&#963: </p></div>
+                    <div class='wrapper s' id='two_thumb2'></div>
+                    <div class='wrapper text2'><p id='output2'>&#963 = ?</p></div>
+               </div>
+                <div class='p' id='p3'>
+                    <div class='wrapper text1'><p id='par_name3'>#: </p></div>
+                    <div class='wrapper s' id='two_thumb3'></div>
+                    <div class='wrapper text2'><p id='output3'># = ?</p></div>
                 </div>
-            </div>
-            <div id='options'>
-
+                <div class='p' id='p4'>
+                    <div class='wrapper text1'><p id='par_name4'>#: </p></div>
+                    <div class='wrapper s' id='two_thumb4'></div>
+                    <div class='wrapper text2'><p id='output4'># = ?</p></div>
+                </div>
             </div>
         </div>
 
